[gd_scene load_steps=2 format=3 uid="uid://clvys7pbyarur"]

[ext_resource type="Script" uid="uid://bbajf7klmdgm7" path="res://scenes/ui/menus/main_menu.gd" id="1_flhq8"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_flhq8")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="GameTitle" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Game Title"

[node name="ButtonStart" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="ButtonLoad" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Load"

[node name="ButtonSettings" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="ButtonExit" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"
